Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- CPSRevisionWidget to only display the revision of a proxy
Bug fixes:
~~~~~~~~~~
- Generic MultiSelect Widget will validate if the selection is empty and the 
  widget is not required, or is required and accepting blank values;
- Allowed Select widgets to sort the entries (missing import)
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- All fields get a new method _getAllDependantFieldIds
- removed some zLOG deprecation warnings